--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GROQ_API_KEY = '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'
+GROQ_API_KEY = ''
 MISTRALAI_API_KEY = 'UHrg4hNRdlZdUIiKoO570hJeH6Pr3POP'
 HUGGINGFACE_API_KEY = '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'
