--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GROQ_API_KEY = ''
-MISTRALAI_API_KEY = ''
-HUGGINGFACE_API_KEY = ''
+GROQ_API_KEY = 'YOUR_GROQ_API_KEY_HERE'
+MISTRALAI_API_KEY = 'YOUR_MISTRALAI_API_KEY_HERE'
+HUGGINGFACE_API_KEY = 'YOUR_HUGGINGFACE_API_KEY_HERE'
